# local-auctions-python-scraper

./: .gitignore  README.md
example API responses/: example_auction_response.json  example_getitems_response.json
src/: .dockerignore  Dockerfile  config.ini  main.py  pyproject.toml
src/models/: auction_models.py
src/utilities/: api.py  config.py  db.py  scraper.py
